--- a/index.html
+++ b/index.html
@@ -149,6 +149,134 @@
       .scroll-element.delay-400 {
         transition-delay: 0.4s;
       }
+
+      /* Gallery Styles */
+      .gallery-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1rem;
+      }
+
+      @media (min-width: 768px) {
+        .gallery-grid {
+          grid-template-columns: repeat(3, 1fr);
+        }
+      }
+
+      .gallery-item {
+        position: relative;
+        overflow: hidden;
+        border-radius: 12px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        aspect-ratio: 4/3;
+      }
+
+      .gallery-item:hover {
+        transform: scale(1.05);
+        box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      }
+
+      .gallery-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.3s ease;
+      }
+
+      .gallery-item:hover img {
+        transform: scale(1.1);
+      }
+
+      .gallery-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(45deg, rgba(3, 105, 161, 0.8), rgba(6, 182, 212, 0.8));
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+        padding: 1rem;
+      }
+
+      .gallery-item:hover .gallery-overlay {
+        opacity: 1;
+      }
+
+      /* Modal Styles */
+      .gallery-modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.9);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s ease;
+      }
+
+      .gallery-modal.active {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .gallery-modal img {
+        max-width: 90vw;
+        max-height: 90vh;
+        object-fit: contain;
+        border-radius: 8px;
+      }
+
+      .gallery-close {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        color: white;
+        font-size: 40px;
+        cursor: pointer;
+        transition: opacity 0.3s ease;
+      }
+
+      .gallery-close:hover {
+        opacity: 0.7;
+      }
+
+      .gallery-nav {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        color: white;
+        font-size: 30px;
+        cursor: pointer;
+        background: rgba(0,0,0,0.5);
+        padding: 10px 15px;
+        border-radius: 50%;
+        transition: all 0.3s ease;
+      }
+
+      .gallery-nav:hover {
+        background: rgba(0,0,0,0.8);
+      }
+
+      .gallery-prev {
+        left: 30px;
+      }
+
+      .gallery-next {
+        right: 30px;
+      }
     </style>
   </head>
   <body class="bg-gray-50 font-sans">
@@ -197,6 +325,13 @@
                 href="#team"
                 class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2"
                 >Equipe</a
+              >
+            </li>
+            <li>
+              <a
+                href="#gallery"
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2"
+                >Galeria</a
               >
             </li>
             <li>
@@ -299,6 +434,13 @@
                   href="#team"
                   class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300"
                   >Equipe</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#gallery"
+                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300"
+                  >Galeria</a
                 >
               </li>
               <li>
@@ -691,6 +833,96 @@
           </div>
         </div>
       </section>
+
+      <!-- Gallery Section -->
+      <section id="gallery" class="py-20 bg-gray-50">
+        <div class="container mx-auto px-4">
+          <div class="text-center mb-12 scroll-element">
+            <h2 class="text-3xl md:text-4xl font-bold text-primary mb-4">
+              Nossa Clínica
+            </h2>
+            <p class="text-gray-600 text-lg">
+              Conheça nossas instalações modernas e ambiente acolhedor
+            </p>
+          </div>
+          
+          <div class="gallery-grid">
+            <!-- Gallery Item 1 -->
+            <div class="gallery-item scroll-element-scale delay-100" data-gallery="1">
+              <img src="https://via.placeholder.com/400x300/0369a1/ffffff?text=Consultorio+1" alt="Consultório Principal" />
+              <div class="gallery-overlay">
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Consultório Principal</h3>
+                  <p class="text-sm">Ambiente moderno e confortável</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Item 2 -->
+            <div class="gallery-item scroll-element-scale delay-200" data-gallery="2">
+              <img src="https://via.placeholder.com/400x300/0284c7/ffffff?text=Recepcao" alt="Recepção" />
+              <div class="gallery-overlay">
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Recepção</h3>
+                  <p class="text-sm">Espaço acolhedor para nossos pacientes</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Item 3 -->
+            <div class="gallery-item scroll-element-scale delay-300" data-gallery="3">
+              <img src="https://via.placeholder.com/400x300/06b6d4/ffffff?text=Equipamentos" alt="Equipamentos Modernos" />
+              <div class="gallery-overlay">
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Tecnologia Avançada</h3>
+                  <p class="text-sm">Equipamentos de última geração</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Item 4 -->
+            <div class="gallery-item scroll-element-scale delay-100" data-gallery="4">
+              <img src="https://via.placeholder.com/400x300/0369a1/ffffff?text=Sala+Esterilizacao" alt="Sala de Esterilização" />
+              <div class="gallery-overlay">
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Esterilização</h3>
+                  <p class="text-sm">Máxima segurança e higiene</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Item 5 -->
+            <div class="gallery-item scroll-element-scale delay-200" data-gallery="5">
+              <img src="https://via.placeholder.com/400x300/0284c7/ffffff?text=Consultorio+2" alt="Consultório 2" />
+              <div class="gallery-overlay">
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Segundo Consultório</h3>
+                  <p class="text-sm">Especializado em procedimentos</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Item 6 -->
+            <div class="gallery-item scroll-element-scale delay-300" data-gallery="6">
+              <img src="https://via.placeholder.com/400x300/06b6d4/ffffff?text=Sala+Espera" alt="Sala de Espera" />
+              <div class="gallery-overlay">
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Sala de Espera</h3>
+                  <p class="text-sm">Conforto enquanto você aguarda</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Gallery Modal -->
+      <div id="gallery-modal" class="gallery-modal">
+        <span class="gallery-close">&times;</span>
+        <span class="gallery-nav gallery-prev">&#8249;</span>
+        <span class="gallery-nav gallery-next">&#8250;</span>
+        <img id="gallery-modal-img" src="" alt="Gallery Image" />
+      </div>
 
       <!-- Contact Section -->
       <section id="contact" class="py-20 bg-primary text-white">
