--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       .gallery-item:hover {
         transform: scale(1.05);
-        box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
       }
 
       .gallery-item img {
@@ -194,7 +194,11 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: linear-gradient(45deg, rgba(3, 105, 161, 0.8), rgba(6, 182, 212, 0.8));
+        background: linear-gradient(
+          45deg,
+          rgba(3, 105, 161, 0.8),
+          rgba(6, 182, 212, 0.8)
+        );
         opacity: 0;
         transition: opacity 0.3s ease;
         display: flex;
@@ -260,14 +264,14 @@
         color: white;
         font-size: 30px;
         cursor: pointer;
-        background: rgba(0,0,0,0.5);
+        background: rgba(0, 0, 0, 0.5);
         padding: 10px 15px;
         border-radius: 50%;
         transition: all 0.3s ease;
       }
 
       .gallery-nav:hover {
-        background: rgba(0,0,0,0.8);
+        background: rgba(0, 0, 0, 0.8);
       }
 
       .gallery-prev {
@@ -845,22 +849,36 @@
               Conheça nossas instalações modernas e ambiente acolhedor
             </p>
           </div>
-          
+
           <div class="gallery-grid">
             <!-- Gallery Item 1 -->
-            <div class="gallery-item scroll-element-scale delay-100" data-gallery="1">
-              <img src="https://via.placeholder.com/400x300/0369a1/ffffff?text=Consultorio+1" alt="Consultório Principal" />
+            <div
+              class="gallery-item scroll-element-scale delay-100"
+              data-gallery="1"
+            >
+              <img
+                src="https://via.placeholder.com/400x300/0369a1/ffffff?text=Consultorio+1"
+                alt="Consultório Principal"
+              />
               <div class="gallery-overlay">
                 <div>
-                  <h3 class="text-lg font-semibold mb-2">Consultório Principal</h3>
+                  <h3 class="text-lg font-semibold mb-2">
+                    Consultório Principal
+                  </h3>
                   <p class="text-sm">Ambiente moderno e confortável</p>
                 </div>
               </div>
             </div>
 
             <!-- Gallery Item 2 -->
-            <div class="gallery-item scroll-element-scale delay-200" data-gallery="2">
-              <img src="https://via.placeholder.com/400x300/0284c7/ffffff?text=Recepcao" alt="Recepção" />
+            <div
+              class="gallery-item scroll-element-scale delay-200"
+              data-gallery="2"
+            >
+              <img
+                src="https://via.placeholder.com/400x300/0284c7/ffffff?text=Recepcao"
+                alt="Recepção"
+              />
               <div class="gallery-overlay">
                 <div>
                   <h3 class="text-lg font-semibold mb-2">Recepção</h3>
@@ -870,19 +888,33 @@
             </div>
 
             <!-- Gallery Item 3 -->
-            <div class="gallery-item scroll-element-scale delay-300" data-gallery="3">
-              <img src="https://via.placeholder.com/400x300/06b6d4/ffffff?text=Equipamentos" alt="Equipamentos Modernos" />
+            <div
+              class="gallery-item scroll-element-scale delay-300"
+              data-gallery="3"
+            >
+              <img
+                src="https://via.placeholder.com/400x300/06b6d4/ffffff?text=Equipamentos"
+                alt="Equipamentos Modernos"
+              />
               <div class="gallery-overlay">
                 <div>
-                  <h3 class="text-lg font-semibold mb-2">Tecnologia Avançada</h3>
+                  <h3 class="text-lg font-semibold mb-2">
+                    Tecnologia Avançada
+                  </h3>
                   <p class="text-sm">Equipamentos de última geração</p>
                 </div>
               </div>
             </div>
 
             <!-- Gallery Item 4 -->
-            <div class="gallery-item scroll-element-scale delay-100" data-gallery="4">
-              <img src="https://via.placeholder.com/400x300/0369a1/ffffff?text=Sala+Esterilizacao" alt="Sala de Esterilização" />
+            <div
+              class="gallery-item scroll-element-scale delay-100"
+              data-gallery="4"
+            >
+              <img
+                src="https://via.placeholder.com/400x300/0369a1/ffffff?text=Sala+Esterilizacao"
+                alt="Sala de Esterilização"
+              />
               <div class="gallery-overlay">
                 <div>
                   <h3 class="text-lg font-semibold mb-2">Esterilização</h3>
@@ -892,19 +924,33 @@
             </div>
 
             <!-- Gallery Item 5 -->
-            <div class="gallery-item scroll-element-scale delay-200" data-gallery="5">
-              <img src="https://via.placeholder.com/400x300/0284c7/ffffff?text=Consultorio+2" alt="Consultório 2" />
+            <div
+              class="gallery-item scroll-element-scale delay-200"
+              data-gallery="5"
+            >
+              <img
+                src="https://via.placeholder.com/400x300/0284c7/ffffff?text=Consultorio+2"
+                alt="Consultório 2"
+              />
               <div class="gallery-overlay">
                 <div>
-                  <h3 class="text-lg font-semibold mb-2">Segundo Consultório</h3>
+                  <h3 class="text-lg font-semibold mb-2">
+                    Segundo Consultório
+                  </h3>
                   <p class="text-sm">Especializado em procedimentos</p>
                 </div>
               </div>
             </div>
 
             <!-- Gallery Item 6 -->
-            <div class="gallery-item scroll-element-scale delay-300" data-gallery="6">
-              <img src="https://via.placeholder.com/400x300/06b6d4/ffffff?text=Sala+Espera" alt="Sala de Espera" />
+            <div
+              class="gallery-item scroll-element-scale delay-300"
+              data-gallery="6"
+            >
+              <img
+                src="https://via.placeholder.com/400x300/06b6d4/ffffff?text=Sala+Espera"
+                alt="Sala de Espera"
+              />
               <div class="gallery-overlay">
                 <div>
                   <h3 class="text-lg font-semibold mb-2">Sala de Espera</h3>
