adicionando endereço correto

--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,8 @@
                 </svg>
               </div>
               <h3 class="text-xl font-semibold mb-2">Endereço</h3>
-              <p class="text-blue-100">Rua das Flores, 123</p>
-              <p class="text-blue-100">Centro - São Paulo</p>
+              <p class="text-blue-100">Taguatinga</p>
+              <p class="text-blue-100">Centro - Taguatinga/DF</p>
             </div>
 
             <div class="text-center scroll-element-scale delay-300">
