--- a/index.html
+++ b/index.html
@@ -63,6 +63,56 @@
         transform: translateX(0);
       }
 
+      /* Mobile Menu Responsive Improvements */
+      @media (max-width: 375px) {
+        .mobile-menu {
+          width: 100vw !important;
+        }
+      }
+
+      @media (max-width: 480px) and (min-width: 376px) {
+        .mobile-menu {
+          width: 90vw !important;
+          max-width: 320px;
+        }
+      }
+
+      /* Prevent horizontal scroll on small screens */
+      @media (max-width: 640px) {
+        body.menu-open {
+          overflow-x: hidden;
+        }
+
+        .mobile-menu {
+          min-height: 100vh;
+          min-height: 100dvh;
+          /* Dynamic viewport height for mobile browsers */
+        }
+
+        /* Ensure no horizontal overflow on very small screens */
+        .container {
+          max-width: 100%;
+          overflow-x: hidden;
+        }
+      }
+
+      /* Additional responsive adjustments for extra small screens */
+      @media (max-width: 320px) {
+        .text-2xl {
+          font-size: 1.3rem;
+        }
+
+        .px-6 {
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
+
+        .py-3 {
+          padding-top: 0.5rem;
+          padding-bottom: 0.5rem;
+        }
+      }
+
       .fade-in {
         animation: fadeIn 0.6s ease-in;
       }
@@ -288,55 +338,55 @@
   <body class="bg-gray-50 font-sans">
     <!-- Header/Navigation -->
     <header class="bg-white shadow-lg fixed w-full top-0 z-50">
-      <nav class="container mx-auto px-4 py-3">
+      <nav class="container mx-auto px-3 sm:px-4 py-3">
         <div class="flex justify-between items-center">
           <!-- Logo -->
-          <div class="flex items-center space-x-3">
-            <img src="assets/logo.png" alt="Vivacqua Odontologia" class="h-12 w-auto" />
+          <div class="flex items-center space-x-2 sm:space-x-3">
+            <img src="assets/logo.png" alt="Vivacqua Odontologia" class="h-10 sm:h-12 w-auto" />
             <div>
-              <h1 class="text-xl font-bold text-primary">Vivacqua</h1>
-              <p class="text-sm text-gray-600">Odontologia</p>
+              <h1 class="text-lg sm:text-xl font-bold text-primary">Vivacqua</h1>
+              <p class="text-xs sm:text-sm text-gray-600">Odontologia</p>
             </div>
           </div>
 
           <!-- Desktop Menu -->
-          <ul class="hidden md:flex space-x-8">
+          <ul class="hidden lg:flex space-x-6 xl:space-x-8">
             <li>
               <a href="#home"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2">Início</a>
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Início</a>
             </li>
             <li>
               <a href="#about"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2">Sobre</a>
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Sobre</a>
             </li>
             <li>
               <a href="#services"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2">Serviços</a>
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Serviços</a>
             </li>
             <li>
               <a href="#team"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2">Equipe</a>
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Equipe</a>
             </li>
             <li>
               <a href="#gallery"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2">Galeria</a>
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Galeria</a>
             </li>
             <li>
               <a href="#contact"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2">Contato</a>
+                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Contato</a>
             </li>
           </ul>
 
           <!-- CTA Button -->
-          <div class="hidden md:block">
+          <div class="hidden lg:block">
             <a href="#contact"
-              class="bg-primary hover:bg-secondary text-white px-6 py-2 rounded-full transition-colors duration-300">
+              class="bg-primary hover:bg-secondary text-white px-4 xl:px-6 py-2 rounded-full transition-colors duration-300 text-sm xl:text-base">
               Agendar Consulta
             </a>
           </div>
 
           <!-- Mobile Menu Button -->
-          <div class="md:hidden">
+          <div class="lg:hidden">
             <button id="mobile-menu-button" class="hamburger">
               <div class="w-6 h-0.5 bg-gray-700 mb-1 transition-all duration-300 line1"></div>
               <div class="w-6 h-0.5 bg-gray-700 mb-1 transition-all duration-300 line2"></div>
@@ -346,14 +396,15 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="mobile-menu fixed top-0 right-0 w-80 h-full bg-white shadow-2xl z-40 md:hidden">
-          <div class="p-6">
-            <div class="flex justify-between items-center mb-8">
+        <div id="mobile-menu"
+          class="mobile-menu fixed top-0 right-0 w-full max-w-sm h-full bg-white shadow-2xl z-40 lg:hidden">
+          <div class="p-4 sm:p-6 h-full overflow-y-auto">
+            <div class="flex justify-between items-center mb-6 sm:mb-8">
               <div class="flex items-center space-x-2">
-                <img src="assets/logo.png" alt="Vivacqua Odontologia" class="h-10 w-auto" />
+                <img src="assets/logo.png" alt="Vivacqua Odontologia" class="h-8 sm:h-10 w-auto" />
                 <div>
-                  <h2 class="text-lg font-bold text-primary">Vivacqua</h2>
-                  <p class="text-sm text-gray-600">Odontologia</p>
+                  <h2 class="text-base sm:text-lg font-bold text-primary">Vivacqua</h2>
+                  <p class="text-xs sm:text-sm text-gray-600">Odontologia</p>
                 </div>
               </div>
               <button id="close-mobile-menu" class="text-gray-500 hover:text-gray-700">
@@ -363,36 +414,36 @@
               </button>
             </div>
 
-            <ul class="space-y-6">
+            <ul class="space-y-4 sm:space-y-6">
               <li>
                 <a href="#home"
-                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300">Início</a>
+                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Início</a>
               </li>
               <li>
                 <a href="#about"
-                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300">Sobre</a>
+                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Sobre</a>
               </li>
               <li>
                 <a href="#services"
-                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300">Serviços</a>
+                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Serviços</a>
               </li>
               <li>
                 <a href="#team"
-                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300">Equipe</a>
+                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Equipe</a>
               </li>
               <li>
                 <a href="#gallery"
-                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300">Galeria</a>
+                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Galeria</a>
               </li>
               <li>
                 <a href="#contact"
-                  class="block text-gray-700 hover:text-accent text-lg transition-colors duration-300">Contato</a>
+                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Contato</a>
               </li>
             </ul>
 
-            <div class="mt-8">
+            <div class="mt-6 sm:mt-8">
               <a href="#contact"
-                class="block w-full text-center bg-primary hover:bg-secondary text-white px-6 py-3 rounded-full transition-colors duration-300">
+                class="block w-full text-center bg-primary hover:bg-secondary text-white px-4 sm:px-6 py-2 sm:py-3 rounded-full transition-colors duration-300 text-sm sm:text-base">
                 Agendar Consulta
               </a>
             </div>
@@ -400,31 +451,32 @@
         </div>
 
         <!-- Mobile Menu Overlay -->
-        <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden md:hidden"></div>
+        <!-- Mobile Menu Overlay -->
+        <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden lg:hidden"></div>
       </nav>
     </header>
 
     <!-- Main Content -->
     <main class="pt-20">
       <!-- Hero Section -->
-      <section id="home" class="bg-gradient-to-r from-primary to-secondary text-white py-20">
-        <div class="container mx-auto px-4 text-center">
+      <section id="home" class="bg-gradient-to-r from-primary to-secondary text-white py-16 sm:py-20">
+        <div class="container mx-auto px-4 sm:px-6 text-center">
           <div class="fade-in">
-            <h1 class="text-4xl md:text-6xl font-bold mb-6">
+            <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold mb-4 sm:mb-6 leading-tight">
               Odontologia de Excelência,<br />
               <span class="text-accent">feita com Humanidade e Clareza</span>
             </h1>
-            <p class="text-xl md:text-2xl mb-8 text-teal-100">
+            <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 text-teal-100 px-2 sm:px-0">
               Cuidamos do seu sorriso com tecnologia de ponta e atendimento
               humanizado
             </p>
-            <div class="space-x-4">
+            <div class="flex flex-col sm:flex-row sm:space-x-4 space-y-3 sm:space-y-0 justify-center">
               <a href="#contact"
-                class="bg-accent hover:bg-teal-600 text-white px-8 py-3 rounded-full text-lg transition-colors duration-300">
+                class="bg-accent hover:bg-teal-600 text-white px-6 sm:px-8 py-3 rounded-full text-base sm:text-lg transition-colors duration-300">
                 Agende Sua Consulta
               </a>
               <a href="#services"
-                class="border-2 border-white text-white hover:bg-white hover:text-primary px-8 py-3 rounded-full text-lg transition-all duration-300">
+                class="border-2 border-white text-white hover:bg-white hover:text-primary px-6 sm:px-8 py-3 rounded-full text-base sm:text-lg transition-all duration-300">
                 Nossos Serviços
               </a>
             </div>
@@ -756,18 +808,18 @@
       </div>
 
       <!-- Contact Section -->
-      <section id="contact" class="py-20 bg-primary text-white">
-        <div class="container mx-auto px-4">
-          <div class="text-center mb-12 scroll-element">
-            <h2 class="text-3xl md:text-4xl font-bold mb-4">
+      <section id="contact" class="py-16 sm:py-20 bg-primary text-white">
+        <div class="container mx-auto px-4 sm:px-6">
+          <div class="text-center mb-8 sm:mb-12 scroll-element">
+            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4">
               Entre em Contato
             </h2>
-            <p class="text-teal-100 text-lg">
+            <p class="text-teal-100 text-base sm:text-lg">
               Agende sua consulta e cuide do seu sorriso
             </p>
           </div>
 
-          <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto">
+          <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8 max-w-4xl mx-auto">
             <div class="text-center scroll-element-scale delay-100">
               <div class="bg-white/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
                 <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -776,9 +828,9 @@
                   </path>
                 </svg>
               </div>
-              <h3 class="text-xl font-semibold mb-2">Telefone</h3>
-              <p class="text-teal-100">(11) 9999-9999</p>
-              <p class="text-teal-100">(11) 3333-3333</p>
+              <h3 class="text-lg sm:text-xl font-semibold mb-2">Telefone</h3>
+              <p class="text-teal-100 text-sm sm:text-base">(11) 9999-9999</p>
+              <p class="text-teal-100 text-sm sm:text-base">(11) 3333-3333</p>
             </div>
 
             <div class="text-center scroll-element-scale delay-200">
@@ -790,9 +842,9 @@
                     d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                 </svg>
               </div>
-              <h3 class="text-xl font-semibold mb-2">Endereço</h3>
-              <p class="text-teal-100">Taguatinga</p>
-              <p class="text-teal-100">Centro - Taguatinga/DF</p>
+              <h3 class="text-lg sm:text-xl font-semibold mb-2">Endereço</h3>
+              <p class="text-teal-100 text-sm sm:text-base">Taguatinga</p>
+              <p class="text-teal-100 text-sm sm:text-base">Centro - Taguatinga/DF</p>
             </div>
 
             <div class="text-center scroll-element-scale delay-300">
@@ -802,16 +854,16 @@
                     d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                 </svg>
               </div>
-              <h3 class="text-xl font-semibold mb-2">Horário</h3>
-              <p class="text-teal-100">Segunda à Sexta: 8h - 18h</p>
-              <p class="text-teal-100">Sábado: 8h - 12h</p>
+              <h3 class="text-lg sm:text-xl font-semibold mb-2">Horário</h3>
+              <p class="text-teal-100 text-sm sm:text-base">Segunda à Sexta: 8h - 18h</p>
+              <p class="text-teal-100 text-sm sm:text-base">Sábado: 8h - 12h</p>
             </div>
           </div>
 
-          <div class="text-center mt-12 scroll-element delay-400">
+          <div class="text-center mt-8 sm:mt-12 scroll-element delay-400">
             <a href="https://wa.me/5511999999999" target="_blank"
-              class="inline-flex items-center bg-green-500 hover:bg-green-600 text-white px-8 py-4 rounded-full text-lg transition-colors duration-300">
-              <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+              class="inline-flex items-center bg-green-500 hover:bg-green-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-base sm:text-lg transition-colors duration-300">
+              <svg class="w-5 h-5 sm:w-6 sm:h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                 <path
                   d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488" />
               </svg>
