melhorias de texto

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 </svg>
               </div>
               <h3 class="text-xl font-semibold text-primary mb-2">
-                Tecnologia Avançada
+                Domínio técnico
               </h3>
               <p class="text-gray-600">
                 Garantia de tratamentos precisos e eficazes, utilizando os melhores recursos e protocolos.
