melhorias de texto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vivacqua Odontologia - Clínica Dentária</title>
+    <title>Vivacqua Odontologia DF - Odontologia do Esporte, Prevenção, Clareamento e Tratamentos Especializados</title>
+    <meta name="description"
+      content="Vivacqua Odontologia: especializada em Odontologia do Esporte, Prevenção, Clareamento, Tratamentos Restauradores, Endodontia, Cirurgia e Prótese dentária. Atendimento humanizado em Taguatinga/DF." />
+    <meta name="keywords"
+      content="odontologia do esporte, prevenção dental, clareamento dental, tratamentos restauradores, endodontia, cirurgia oral, prótese dentária, dentista Taguatinga, clínica odontológica DF" />
     <link rel="icon" type="image/png" href="assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -615,7 +619,8 @@
               Nossos Serviços
             </h2>
             <p class="text-gray-600 text-lg">
-              Oferecemos uma ampla gama de tratamentos odontológicos
+              Odontologia do Esporte, Prevenção, Clareamento, Tratamentos Restauradores, Endodontia, Cirurgia, Prótese
+              dentária
             </p>
           </div>
 
@@ -664,14 +669,14 @@
                 <div class="bg-primary/10 w-12 h-12 rounded-full flex items-center justify-center mx-auto mb-4">
                   <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+                      d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                   </svg>
                 </div>
                 <h3 class="text-lg font-semibold text-primary mb-2">
-                  Implantes
+                  Odontologia do Esporte
                 </h3>
                 <p class="text-gray-600 text-sm">
-                  Substitição de dentes com tecnologia moderna
+                  Especialidade em prevenção e tratamento para atletas
                 </p>
               </div>
             </div>
@@ -682,15 +687,15 @@
                 <div class="bg-primary/10 w-12 h-12 rounded-full flex items-center justify-center mx-auto mb-4">
                   <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z">
+                      d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
                     </path>
                   </svg>
                 </div>
                 <h3 class="text-lg font-semibold text-primary mb-2">
-                  Ortodontia
+                  Endodontia
                 </h3>
                 <p class="text-gray-600 text-sm">
-                  Alinhamento e correção dentária
+                  Tratamento de canal e cuidados endodônticos
                 </p>
               </div>
             </div>
