--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vivacqua Odontologia DF - Odontologia do Esporte, Prevenção, Clareamento e Tratamentos Especializados</title>
+    <title>Vivacqua Odontologia - Alameda Shopping Empresarial Taguatinga Centro DF | Odontologia do Esporte</title>
     <meta name="description"
-      content="Vivacqua Odontologia: especializada em Odontologia do Esporte, Prevenção, Clareamento, Tratamentos Restauradores, Endodontia, Cirurgia e Prótese dentária. Atendimento humanizado em Taguatinga/DF." />
+      content="Vivacqua Odontologia no Alameda Shopping Empresarial, Taguatinga Centro DF. Especializada em Odontologia do Esporte, Prevenção, Clareamento, Tratamentos Restauradores, Endodontia, Cirurgia e Prótese dentária. Atendimento humanizado." />
     <meta name="keywords"
-      content="odontologia do esporte, prevenção dental, clareamento dental, tratamentos restauradores, endodontia, cirurgia oral, prótese dentária, dentista Taguatinga, clínica odontológica DF" />
+      content="odontologia do esporte, prevenção dental, clareamento dental, tratamentos restauradores, endodontia, cirurgia oral, prótese dentária, dentista Taguatinga Centro, Alameda Shopping Empresarial, clínica odontológica DF, dentista Taguatinga, odontologia Taguatinga Centro" />
+    <meta name="geo.region" content="BR-DF" />
+    <meta name="geo.placename" content="Taguatinga Centro, Distrito Federal" />
+    <meta name="geo.position" content="-15.8267;-48.0583" />
+    <meta name="ICBM" content="-15.8267, -48.0583" />
+    <meta name="author" content="Vivacqua Odontologia" />
+    <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/png" href="assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -905,8 +911,8 @@
                 </svg>
               </div>
               <h3 class="text-lg sm:text-xl font-semibold mb-2">Endereço</h3>
-              <p class="text-teal-100 text-sm sm:text-base">Taguatinga</p>
-              <p class="text-teal-100 text-sm sm:text-base">Centro - Taguatinga/DF</p>
+              <p class="text-teal-100 text-sm sm:text-base">Alameda Shopping Empresarial</p>
+              <p class="text-teal-100 text-sm sm:text-base">Taguatinga Centro - DF</p>
             </div>
 
             <div class="text-center scroll-element-scale delay-300">
