adicionando foto da doutora

--- a/index.html
+++ b/index.html
@@ -617,6 +617,90 @@
         </div>
       </section>
 
+      <!-- Dra. Amanda Section -->
+      <section id="dra-amanda" class="py-20 bg-gradient-to-br from-primary/5 to-accent/5">
+        <div class="container mx-auto px-4">
+          <div class="max-w-5xl mx-auto">
+            <div class="grid md:grid-cols-2 gap-12 items-center">
+              <!-- Imagem/Avatar -->
+              <div class="scroll-element-left">
+                <div class="relative">
+                  <div
+                    class="aspect-square rounded-2xl bg-gradient-to-br from-primary to-secondary overflow-hidden shadow-2xl">
+                    <div class="w-full h-full flex items-center justify-center">
+                      <img src="./assets/foto-amanda.jpg" alt="foto da doutora Amanda Sorrindo">
+                    </div>
+                  </div>
+                  <!-- Decorative elements -->
+                  <div class="absolute -top-4 -right-4 w-24 h-24 bg-accent/20 rounded-full blur-2xl"></div>
+                  <div class="absolute -bottom-4 -left-4 w-32 h-32 bg-primary/20 rounded-full blur-2xl"></div>
+                </div>
+              </div>
+
+              <!-- Conteúdo -->
+              <div class="scroll-element-right">
+                <div class="mb-6">
+                  <span
+                    class="inline-block px-4 py-2 bg-primary/10 text-primary rounded-full text-sm font-semibold mb-4">
+                    Odontologia do Esporte
+                  </span>
+                  <h2 class="text-3xl md:text-4xl font-bold text-primary mb-4">
+                    Conheça a Dra. Amanda Vivacqua
+                  </h2>
+                </div>
+
+                <div class="space-y-4 text-gray-700 leading-relaxed">
+                  <p>
+                    <strong class="text-primary">Mestranda em Periodontia pela Universidade de Brasília (UnB)</strong> e
+                    referência em <strong class="text-primary">Odontologia do Esporte no Distrito Federal</strong>,
+                    a Dra. Amanda Vivacqua possui ampla experiência no cuidado da saúde oral de esportistas e atletas.
+                    Além disso, atua nas áreas de periodontia, traumatologia dentária, odontologia restauradora e
+                    estética,
+                    endodontia, odontopediatria, cirurgia e reabilitação protética. Seu compromisso é oferecer um
+                    atendimento de excelência, sempre aliado às mais modernas técnicas e evidências científicas.
+                  </p>
+
+                  <p>
+                    Apaixonada pela Odontologia, já publicou artigos científicos, participou de diversos projetos de
+                    pesquisa e extensão e se dedica, principalmente, à odontologia esportiva, periodontia, odontologia
+                    restauradora e reabilitadora, endodontia, odontopediatria e cirurgia.
+                  </p>
+
+                  <p class="text-primary font-semibold italic">
+                    "Meu propósito é unir conhecimento, tecnologia e cuidado humanizado para transformar sorrisos e
+                    promover qualidade de vida aos meus pacientes."
+                  </p>
+                </div>
+
+                <!-- Badges de especialidades -->
+                <div class="flex flex-wrap gap-2 mt-6">
+                  <span
+                    class="px-3 py-1 bg-white border border-primary/30 text-primary rounded-full text-xs font-medium">
+                    Mestranda UnB
+                  </span>
+                  <span
+                    class="px-3 py-1 bg-white border border-primary/30 text-primary rounded-full text-xs font-medium">
+                    Odontologia do Esporte
+                  </span>
+                  <span
+                    class="px-3 py-1 bg-white border border-primary/30 text-primary rounded-full text-xs font-medium">
+                    Periodontia
+                  </span>
+                  <span
+                    class="px-3 py-1 bg-white border border-primary/30 text-primary rounded-full text-xs font-medium">
+                    Endodontia
+                  </span>
+                  <span
+                    class="px-3 py-1 bg-white border border-primary/30 text-primary rounded-full text-xs font-medium">
+                    Odontopediatria
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Services Section -->
       <section id="services" class="py-20 bg-gray-50">
         <div class="container mx-auto px-4">
